[package]
name = "route-ratelimit"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
description = "Route-based rate limiting middleware for reqwest"
license = "MIT"
repository = "https://github.com/haut/route-ratelimit"
documentation = "https://docs.rs/route-ratelimit"
homepage = "https://github.com/haut/route-ratelimit"
readme = "README.md"
keywords = ["rate-limit", "ratelimit", "routing", "reqwest", "middleware"]
categories = ["web-programming", "network-programming"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
reqwest = { version = "0.12", default-features = false }
reqwest-middleware = "0.4"
http = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["time"] }
thiserror = "2"
rand = "0.9"
tracing = { version = "0.1", optional = true }

[features]
default = []
tracing = ["dep:tracing"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
wiremock = "0.6"
reqwest = { version = "0.12", features = ["rustls-tls"] }
criterion = { version = "0.5", features = ["html_reports"] }

[profile.bench]
lto = "thin"
codegen-units = 1

[[bench]]
name = "throughput"
harness = false
